<resources>
    <string name="common_google_play_services_notification_ticker">Google Play服务出错</string>
    <string name="common_google_play_services_notification_needs_installation_title">安装Google Play服务后才能运行应用。</string>
    <string name="common_google_play_services_notification_needs_update_title">更新Google Play服务后才能运行应用。</string>
    <string name="common_android_wear_notification_needs_update_text">某个应用需要更新Android Wear应用才能正常运行。</string>
    <string name="common_google_play_services_needs_enabling_title">启用Google Play服务后才能运行应用。</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">%1$s发出的请求</string>
    <string name="common_google_play_services_install_title">获取Google Play服务</string>
    <string name="common_google_play_services_install_text_phone">您的手机中没有Google Play服务，您必须先安装该服务才能运行此应用。</string>
    <string name="common_google_play_services_install_text_tablet">您的平板电脑中没有Google Play服务，您必须先安装该服务才能运行此应用。</string>
    <string name="common_google_play_services_install_button">获取Google Play服务</string>
    <string name="common_google_play_services_enable_title">启用Google Play服务</string>
    <string name="common_google_play_services_enable_text">您必须先启用Google Play服务才能运行此应用。</string>
    <string name="common_google_play_services_enable_button">启用Google Play服务</string>
    <string name="common_google_play_services_update_title">更新Google Play服务</string>
    <string name="common_android_wear_update_title">更新Android Wear</string>
    <string name="common_google_play_services_update_text">您必须先更新Google Play服务才能运行此应用。</string>
    <string name="common_android_wear_update_text">只有更新Android Wear应用后，此应用才能正常运行。</string>
    <string name="common_google_play_services_network_error_title">网络错误</string>
    <string name="common_google_play_services_network_error_text">您必须有数据网络连接才能接入Google Play服务。</string>
    <string name="common_google_play_services_invalid_account_title">无效帐户</string>
    <string name="common_google_play_services_invalid_account_text">此设备上不存在指定的帐户，请选择其他帐户。</string>
    <string name="common_google_play_services_unknown_issue">Google Play服务出现未知问题。</string>
    <string name="common_google_play_services_unsupported_title">Google Play服务</string>
    <string name="common_google_play_services_unsupported_text">您的设备不支持部分应用所依赖的Google Play服务。请与设备制造商联系，以寻求帮助。</string>
    <string name="common_google_play_services_update_button">更新</string>
    <string name="common_signin_button_text">登录</string>
    <string name="common_signin_button_text_long">使用Google帐户登录</string>
    <string name="common_open_on_phone">在手机上打开</string>
    <string name="commono_google_play_services_api_unavailable_text">运行此应用所需的一项或多项 Google Play 服务目前无法使用。请与开发者联系以寻求帮助。</string>
    <string name="common_google_play_services_sign_in_failed_title">登录失败</string>
    <string name="common_google_play_services_sign_in_failed_text">登录该帐户时出错。请选择其他帐户。</string>
    <string name="waring_internet_error">网络连接失败</string>
    <string name="loading">数据加载中. . . 请等待</string>
    <string name="server">平台网址</string>
    <string name="password">密码</string>
    <string name="username">用户名</string>
    <string name="plate">IMEI号</string>
    <string name="remember">记住登录信息</string>
    <string name="login">登录</string>
    <string name="loginbyUserName">用户名登录</string>
    <string name="loginbyPlate">IMEI号登录</string>
    <string name="notice">提示</string>
    <string name="action">注意</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="sure_to_exit">你确定要退出吗?</string>
    <string name="username_cannot_be_null">请输入用户名</string>
    <string name="server_cannot_be_null">请输入平台网址</string>
    <string name="plate_cannot_be_null">请输入IMEI号</string>
    <string name="password_cannot_be_null">请输入密码</string>
    <string name="username_or_password_error">用户名或密码错误</string>
    <string name="plate_or_password_error">IMEI号或密码错误</string>
    <string name="Home">首页</string>
    <string name="DeviceList">设备列表</string>
    <string name="Monitoring">监控中心</string>
    <string name="Message">消息中心</string>
    <string name="Tracking">实时跟踪</string>
    <string name="History">历史轨迹</string>
    <string name="Electronic">电子栅栏</string>
    <string name="Command">命令下发</string>
    <string name="DeviceInfo">设备信息</string>
    <string name="DeviceMessage">设备消息</string>
    <string name="AlarmSetting">报警提醒</string>
    <string name="OBDDiagnosis">汽车管理</string>
    <string name="Navigation">周边导航</string>
    <string name="UserInfo">用户信息</string>
    <string name="loging">登录中. . . 请稍后</string>
    <string name="getdataerror">请求数据失败,请稍候再试</string>
    <string name="online">在线</string>
    <string name="offline">离线</string>
    <string name="all">全部</string>
    <string name="notenabled">未启用</string>
    <string name="movement">运动</string>
    <string name="stationary">静止</string>
    <string name="arrears">欠费</string>
    <string name="nocarnumber">暂无车牌号码显示</string>
    <string name="search">搜索</string>
    <string name="waring">注意</string>
    <string name="waring_start_time_is_after_end">开始时间比结束时间更大</string>
    <string name="waring_time">请搜索一天范围内的历史轨迹</string>
    <string name="speed">速度</string>
    <string name="course">方向</string>
    <string name="course_N">正北</string>
    <string name="course_EN">东北</string>
    <string name="course_E">正东</string>
    <string name="course_ES">东南</string>
    <string name="course_S">正南</string>
    <string name="course_WS">西南</string>
    <string name="course_W">正西</string>
    <string name="course_WN">西北</string>
    <string name="minute">分钟</string>
    <string name="parkingTime">停车时长</string>
    <string name="process">进度</string>
    <string name="deviceinfo">设备信息</string>
    <string name="userinfo">用户信息</string>
    <string name="devicename">设备名称</string>
    <string name="devicesn">设备编号</string>
    <string name="deviceexpreid">到期时间</string>
    <string name="devicecarno">车牌号码</string>
    <string name="devicemodel">设备型号</string>
    <string name="devicephone">设备电话</string>
    <string name="contact">联系人</string>
    <string name="contactphone">联系电话</string>
    <string name="customername">客户名称</string>
    <string name="email">邮箱</string>
    <string name="address">地址</string>
    <string name="createTime">创建时间</string>
    <string name="serviceName">服务商名称</string>
    <string name="servicePhone">服务商电话</string>
    <string name="selectpoint">设置电子栅栏</string>
    <string name="Options">选项</string>
    <string name="sure_to_delete">你确定要删除这项吗</string>
    <string name="deleteSuccess">删除成功</string>
    <string name="deleteFailed">删除失败</string>
    <string name="editelEctronic">编辑电子围栏</string>
    <string name="deleteElectronic">删除电子围栏</string>
    <string name="addElectronic">添加电子围栏</string>
    <string name="lat">纬度</string>
    <string name="lng">经度</string>
    <string name="radius">半径</string>
    <string name="name">名称</string>
    <string name="saveSucess">保存成功</string>
    <string name="savefailed">保存失败</string>
    <string name="name_empty">请输入围栏名称</string>
    <string name="point_empty">请选择中心点</string>
    <string name="radius_empty">请输入围栏半径</string>
    <string name="point_error">中心点纬度输入错误</string>
    <string name="radius_error_100">围栏半径不能小于100米</string>
    <string name="radius_error">围栏半径输入错误</string>
    <string name="hour">小时</string>
    <string name="day">天</string>
    <string name="offlinemap">离线地图</string>
    <string name="logout">注销</string>
    <string name="sure_to_logout">你确定要注销吗?</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="customer">自定义</string>
    <string name="Stations">加油站</string>
    <string name="Hospital">医院</string>
    <string name="Parkinglot">停车场</string>
    <string name="Bank">银行</string>
    <string name="Food">美食</string>
    <string name="Hotel">酒店</string>
    <string name="Bus">公交站</string>
    <string name="Resort">娱乐场</string>
    <string name="Supermarket">超市</string>
    <string name="setfence">设防</string>
    <string name="removefence">撤防</string>
    <string name="oiloff">断油</string>
    <string name="oilon">恢复油</string>
    <string name="no_result">没有获取到任何数据</string>
    <string name="command_send_failed">指令发送失败</string>
    <string name="device_offline">当前设备不在线,无法发送指令</string>
    <string name="device_notexist">设备不存在</string>
    <string name="command_invalid">指令无效</string>
    <string name="command_sending">指令发送中...</string>
    <string name="sendtime">发送时间</string>
    <string name="responsetime">回复时间</string>
    <string name="commandsending">命令已发送</string>
    <string name="commandwaitsend">命令未发送</string>
    <string name="commandsendsuccess">命令已返回</string>
    <string name="commandsendwaitresponse">等待设备应答</string>
    <string name="commandsendtimeout">指令发送超时</string>
    <string name="command_saved">指令已保存</string>
    <string name="alarmVibration">震动报警</string>
    <string name="alarmOffline">离线报警</string>
    <string name="alarmSOS">求救报警</string>
    <string name="alarmLowPower">低电报警</string>
    <string name="alarmZoneIn">进电子栅栏报警</string>
    <string name="alarmZoneOut">出电子栅栏报警</string>
    <string name="alarmDisPower">断电报警</string>
    <string name="alarmExpire">到期报警</string>
    <string name="nodevice">在这个用户名下没有发现任何设备,请先在平台中添加设备至本用户名下,再尝试登录手机APP</string>
    <string name="distance_between_you_and_car">人车相距</string>
    <string name="refresh_timeout">\#n秒后刷新</string>
    <string name="googleMap">谷歌地图</string>
    <string name="baiduMap">百度地图</string>
    <string name="not_support_google_map">本手机并不支持谷歌地图，请先安装谷歌套件</string>
    <string name="control">车辆控制</string>
    <string name="carno_exists">车牌号码存在</string>
    <string name="alarmType">报警类型</string>
    <string name="alarmAlert">报警设置</string>
    <string name="enable">APP报警</string>
    <string name="alertVibration">震动</string>
    <string name="alertSound">声音</string>
    <string name="Resume_SMS">进入SMS短信界面</string>
    <string name="Command_Control">指令控制</string>
    <string name="Password_change">密码修改</string>
    <string name="New_Password">新密码</string>
    <string name="Repeat_New_Password">重复新密码</string>
    <string name="Password_cannot_be_empty">密码不能为空</string>
    <string name="Incorrect_password">原密码错误</string>
    <string name="New_password_cannot_be_empty">新密码不能为空</string>
    <string name="Both_passwords_do_not_match_Try_again">两次输入的新密码不相同</string>
    <string name="Notice">提示</string>
    <string name="Add_Device">添加设备</string>
    <string name="Device_Name">设备名称</string>
    <string name="IMEI_Code">设备编号</string>
    <string name="Phone_Number">手机号码</string>
    <string name="Device_Type">设备类型</string>
    <string name="Device_name_cannot_be_empty">设备名称不能为空</string>
    <string name="IMEI_code_cannot_be_empty">设备编号不能为空</string>
    <string name="SIM_No_cannot_be_empty">手机号码不能为空</string>
    <string name="Please_select_the_device_type">请选择设备类型</string>
    <string name="The_device_is_exists">设备不能重复添加</string>
    <string name="Car">车机</string>
    <string name="Person">个人</string>
    <string name="Edit_Device">编辑设备</string>
    <string name="Common">常用指令</string>
    <string name="General">普通指令</string>
    <string name="Records">发送记录</string>
    <string name="Time0_3600seconds">时间(0-3600秒)</string>
    <string name="Call_Times">电话次数</string>
    <string name="English">英语</string>
    <string name="Chinese">中文</string>
    <string name="Device_Password">设备密码</string>
    <string name="SMS_Mode">短信模式</string>
    <string name="GPRS_Mode">GPRS模式</string>
    <string name="Move_Distancem">移动距离(米)</string>
    <string name="Speedkmh">速度阀值(公里/小时)</string>
    <string name="Close">关闭</string>
    <string name="SMS">发短信</string>
    <string name="Call">打电话</string>
    <string name="rechargeamount">充值金额</string>
    <string name="sim">SIM</string>
    <string name="orderinfo">订单信息</string>
    <string name="paystatus">支付状态</string>
    <string name="paytime">支付时间</string>
    <string name="orderid">订单号</string>
    <string name="rmb">￥</string>
</resources>