<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_gravity="bottom" android:id="@id/relativeLayout_title" android:background="@drawable/title_bg" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="26.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:id="@id/textView_Title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Device_Name" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
        <Button android:id="@id/button_back" android:background="@drawable/back" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <Button android:id="@id/button_Common" android:background="@drawable/common" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:text="@string/Common" />
    <Button android:id="@id/button_General" android:background="@drawable/general" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:text="@string/General" />
    <Button android:id="@id/button_Edit" android:background="@drawable/device_edit" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:text="@string/Edit_Device" />
    <Button android:id="@id/button_Records" android:background="@drawable/records" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:text="@string/Records" />
</LinearLayout>