<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_gravity="bottom" android:id="@id/relativeLayout_title" android:background="@drawable/title_bg" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="26.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:id="@id/textView_Title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Add_Device" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
        <Button android:id="@id/button_back" android:background="@drawable/back" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <EditText android:id="@id/editText_DeviceName" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:hint="@string/Device_Name" android:ems="10">
        <requestFocus />
    </EditText>
    <EditText android:id="@id/editText_IMEICode" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:hint="@string/IMEI_Code" android:ems="10" />
    <EditText android:id="@id/editText_PhoneNumber" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:hint="@string/Phone_Number" android:ems="10" />
    <Spinner android:id="@id/spinner_DeviceType" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" />
    <Button android:id="@id/button_Confirm" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/confirm" />
</LinearLayout>