<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" android:background="@color/white">
    <RelativeLayout android:layout_gravity="bottom" android:id="@id/relativeLayout_title" android:background="@drawable/title_bg" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="26.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:id="@id/textView_Title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Command_Control" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
        <Button android:id="@id/button_back" android:background="@drawable/back" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_centerVertical="true"
            android:onClick="backClick" />
    </RelativeLayout>
    <EditText android:id="@id/editText_Password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:hint="@string/password" android:ems="10" android:inputType="textPassword">
        <requestFocus />
    </EditText>
    <Button android:id="@id/button_Login" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/login" />
    <Button android:id="@id/button_Password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/Password_change" />
</LinearLayout>