<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ffececec" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:background="@drawable/title_bg" android:layout_width="fill_parent" android:layout_height="50.0dip">
        <Button android:id="@id/button_back" android:background="@drawable/back" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <TextView android:textSize="22.0sp" android:textColor="#ffffffff" android:id="@id/textView_Title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/orderinfo" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:text="@string/orderid" />
        <TextView android:id="@id/tv_order_id" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:text="1234" android:layout_alignParentRight="true" />
        <View android:id="@id/view1" android:background="#ff909090" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:layout_below="@id/tv_order_id" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:text="@string/sim" android:layout_below="@id/view1" />
        <TextView android:id="@id/tv_sim" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:text="1234" android:layout_below="@id/view1" android:layout_alignParentRight="true" />
        <View android:id="@id/view2" android:background="#ff909090" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:layout_below="@id/tv_sim" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:text="@string/rechargeamount" android:layout_below="@id/view2" />
        <TextView android:id="@id/tv_amount" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:text="1234" android:layout_below="@id/view2" android:layout_alignParentRight="true" />
        <TextView android:id="@id/tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/rmb" android:layout_toLeftOf="@id/tv_amount" android:layout_below="@id/view2" />
        <View android:id="@id/view3" android:background="#ff909090" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:layout_below="@id/tv_amount" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:text="@string/paytime" android:layout_below="@id/view3" />
        <TextView android:id="@id/tv_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:text="2015-01-30" android:layout_below="@id/view3" android:layout_alignParentRight="true" />
        <View android:id="@id/view4" android:background="#ff909090" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:layout_below="@id/tv_time" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:text="@string/paystatus" android:layout_below="@id/view4" />
        <TextView android:id="@id/tv_status" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:text="pay" android:layout_below="@id/view4" android:layout_alignParentRight="true" />
    </RelativeLayout>
</LinearLayout>