<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="55.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0sp" android:textStyle="bold" android:id="@id/myzone_list_item_textView_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="5.0dip" android:text="name" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
    <TextView android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lng" android:layout_below="@id/myzone_list_item_textView_name" android:layout_alignLeft="@id/myzone_list_item_textView_name" />
    <TextView android:id="@id/myzone_list_item_textView_lng" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" android:layout_toRightOf="@id/textView2" android:layout_alignBaseline="@id/textView2" android:layout_alignBottom="@id/textView2" />
    <TextView android:id="@id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/lat" android:layout_toRightOf="@id/myzone_list_item_textView_lng" android:layout_alignBaseline="@id/myzone_list_item_textView_lng" android:layout_alignBottom="@id/myzone_list_item_textView_lng" />
    <TextView android:id="@id/myzone_list_item_textView_lat" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" android:layout_toRightOf="@id/textView3" android:layout_alignBaseline="@id/textView3" android:layout_alignBottom="@id/textView3" />
    <TextView android:id="@id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/radius" android:layout_toRightOf="@id/myzone_list_item_textView_lat" android:layout_alignBaseline="@id/myzone_list_item_textView_lat" android:layout_alignBottom="@id/myzone_list_item_textView_lat" />
    <TextView android:id="@id/myzone_list_item_textView_radius" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" android:layout_toRightOf="@id/textView4" android:layout_alignBaseline="@id/textView4" android:layout_alignBottom="@id/textView4" />
</RelativeLayout>