<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="#ffececec" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_gravity="bottom" android:id="@id/relativeLayout1" android:background="@drawable/title_bg" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="26.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:id="@id/textView_Title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
        <Button android:id="@id/button_back" android:background="@drawable/back" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <Button android:id="@id/button_save" android:background="@drawable/save" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <EditText android:id="@id/editText_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:ems="10" android:layout_below="@id/relativeLayout1" android:layout_alignLeft="@id/EditText_lng" android:layout_alignParentRight="true" android:inputType="text">
        <requestFocus />
    </EditText>
    <TextView android:id="@id/textView_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/name" android:layout_alignBaseline="@id/editText_name" android:layout_alignBottom="@id/editText_name" android:layout_alignParentLeft="true" />
    <EditText android:id="@id/EditText_lng" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:ems="10" android:layout_toRightOf="@id/TextView03" android:layout_below="@id/editText_name" android:layout_alignParentRight="true" android:inputType="numberDecimal" />
    <TextView android:id="@id/textView_bus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lng" android:layout_alignBaseline="@id/EditText_lng" android:layout_alignLeft="@id/textView_name" android:layout_alignBottom="@id/EditText_lng" />
    <EditText android:id="@id/EditText_lat" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:ems="10" android:layout_below="@id/EditText_lng" android:layout_alignLeft="@id/EditText_lng" android:layout_alignRight="@id/EditText_lng" android:inputType="numberDecimal" />
    <TextView android:id="@id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lat" android:layout_alignBaseline="@id/EditText_lat" android:layout_alignLeft="@id/textView_bus" android:layout_alignBottom="@id/EditText_lat" />
    <EditText android:id="@id/EditText_radius" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="10.0dip" android:ems="10" android:layout_toRightOf="@id/TextView03" android:layout_below="@id/EditText_lat" android:layout_alignRight="@id/EditText_lat" android:inputType="numberDecimal" />
    <TextView android:id="@id/TextView03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/radius" android:layout_alignBaseline="@id/EditText_radius" android:layout_alignLeft="@id/TextView02" android:layout_alignBottom="@id/EditText_radius" />
</RelativeLayout>